# term-ai

./: ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  ROADMAP.md  requirements.md
shell-integrations/zsh/: term-ai.zsh
src/: main.rs
