[package]
name = "term-ai"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Edward Howard"]
description = "A CLI tool to query Ollama for shell commands"

[dependencies]
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
scraper = "0.22"
urlencoding = "2.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
